--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.2.0",
+    "sticky-sidebar": "^3.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
